ServiceおよびRepositoryの更新および条件検索メソッドの不具合を修正